@@ -10,6 +10,8 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Entity
 @Getter
@@ -43,8 +45,22 @@ public class OperationDay {
             operationDay.operationHours.add(OperationHour.of(operationDayHourDto, operationDay));
         } else {
             operationDay.operationHours = operationDayDto.getOperationDayHours().stream().map(operationDayHourDto ->
-                    OperationHour.of(operationDayHourDto, operationDay)).toList();
+                    OperationHour.of(operationDayHourDto, operationDay))
+                    .collect(Collectors.toList());
         }
         return operationDay;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        OperationDay that = (OperationDay) o;
+        return Objects.equals(date, that.date);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(date);
     }
 }
